b=805529 wake up for Gecko events even in a nested event loop r=karlt

--HG--
extra : transplant_source : %D2%AF%8B%EFm%9E%7B%999%231%DF%A8%CD%3FW%B8%908j